{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 750,
  "lineage": "fe6639a8-730d-3a99-0028-45f279459772",
  "resources": [
    {
      "module": "module.vms",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "k8s_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "master-nfs",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/networkInterfaces/k8s-master-nfs-nic",
            "internal_domain_name_suffix": "l2xbyocyqtyelawmlvcwhpjuhb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "k8s-master-nfs-ip-config",
                "primary": true,
                "private_ip_address": "172.16.1.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/publicIPAddresses/k8s-master-nfs-ip",
                "subnet_id": "/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/virtualNetworks/k8s-net/subnets/k8s-subnet"
              }
            ],
            "location": "westeurope",
            "name": "k8s-master-nfs-nic",
            "private_ip_address": "172.16.1.10",
            "private_ip_addresses": [
              "172.16.1.10"
            ],
            "resource_group_name": "azure-k8s",
            "tags": {
              "environment": "k8s-prod"
            }
          },
          "dependencies": [
            "module.vms.azurerm_public_ip.k8s_public_ip",
            "module.vms.azurerm_resource_group.k8s",
            "module.vms.azurerm_subnet.k8s_subnet"
          ]
        },
        {
          "index_key": "worker01",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/networkInterfaces/k8s-worker01-nic",
            "internal_domain_name_suffix": "l2xbyocyqtyelawmlvcwhpjuhb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "k8s-worker01-ip-config",
                "primary": true,
                "private_ip_address": "172.16.1.11",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/publicIPAddresses/k8s-worker01-ip",
                "subnet_id": "/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/virtualNetworks/k8s-net/subnets/k8s-subnet"
              }
            ],
            "location": "westeurope",
            "name": "k8s-worker01-nic",
            "private_ip_address": "172.16.1.11",
            "private_ip_addresses": [
              "172.16.1.11"
            ],
            "resource_group_name": "azure-k8s",
            "tags": {
              "environment": "k8s-prod"
            }
          },
          "dependencies": [
            "module.vms.azurerm_public_ip.k8s_public_ip",
            "module.vms.azurerm_resource_group.k8s",
            "module.vms.azurerm_subnet.k8s_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "k8s_sec_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "master-nfs",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/networkInterfaces/k8s-master-nfs-nic|/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/networkSecurityGroups/k8s-master-nfs-sec-group",
            "network_interface_id": "/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/networkInterfaces/k8s-master-nfs-nic",
            "network_security_group_id": "/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/networkSecurityGroups/k8s-master-nfs-sec-group"
          },
          "dependencies": [
            "module.vms.azurerm_network_interface.k8s_nic",
            "module.vms.azurerm_network_security_group.k8s_sec_group",
            "module.vms.azurerm_public_ip.k8s_public_ip",
            "module.vms.azurerm_resource_group.k8s",
            "module.vms.azurerm_subnet.k8s_subnet"
          ]
        },
        {
          "index_key": "worker01",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/networkInterfaces/k8s-worker01-nic|/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/networkSecurityGroups/k8s-worker01-sec-group",
            "network_interface_id": "/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/networkInterfaces/k8s-worker01-nic",
            "network_security_group_id": "/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/networkSecurityGroups/k8s-worker01-sec-group"
          },
          "dependencies": [
            "module.vms.azurerm_network_interface.k8s_nic",
            "module.vms.azurerm_network_security_group.k8s_sec_group",
            "module.vms.azurerm_public_ip.k8s_public_ip",
            "module.vms.azurerm_resource_group.k8s",
            "module.vms.azurerm_subnet.k8s_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "k8s_sec_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "master-nfs",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/networkSecurityGroups/k8s-master-nfs-sec-group",
            "location": "westeurope",
            "name": "k8s-master-nfs-sec-group",
            "resource_group_name": "azure-k8s",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "10250-10252",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "TCP-2",
                "priority": 1004,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "10255",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "TCP-3",
                "priority": 1005,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "2379-2380",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "TCP-1",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "6443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "TCP-0",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "k8s-prod"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vms.azurerm_resource_group.k8s"
          ]
        },
        {
          "index_key": "worker01",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/networkSecurityGroups/k8s-worker01-sec-group",
            "location": "westeurope",
            "name": "k8s-worker01-sec-group",
            "resource_group_name": "azure-k8s",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "10250",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "TCP-0",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "30000-32767",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "TCP-1",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "k8s-prod"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vms.azurerm_resource_group.k8s"
          ]
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "commo-rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "master-nfs",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/networkSecurityGroups/k8s-master-nfs-sec-group/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "k8s-master-nfs-sec-group",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "azure-k8s",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vms.azurerm_network_security_group.k8s_sec_group",
            "module.vms.azurerm_resource_group.k8s"
          ]
        },
        {
          "index_key": "worker01",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/networkSecurityGroups/k8s-worker01-sec-group/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "k8s-worker01-sec-group",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "azure-k8s",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vms.azurerm_network_security_group.k8s_sec_group",
            "module.vms.azurerm_resource_group.k8s"
          ]
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "6443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/networkSecurityGroups/k8s-master-nfs-sec-group/securityRules/TCP-0",
            "name": "TCP-0",
            "network_security_group_name": "k8s-master-nfs-sec-group",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "azure-k8s",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vms.azurerm_network_security_group.k8s_sec_group",
            "module.vms.azurerm_resource_group.k8s"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "2379-2380",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/networkSecurityGroups/k8s-master-nfs-sec-group/securityRules/TCP-1",
            "name": "TCP-1",
            "network_security_group_name": "k8s-master-nfs-sec-group",
            "priority": 1003,
            "protocol": "Tcp",
            "resource_group_name": "azure-k8s",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vms.azurerm_network_security_group.k8s_sec_group",
            "module.vms.azurerm_resource_group.k8s"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "10250-10252",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/networkSecurityGroups/k8s-master-nfs-sec-group/securityRules/TCP-2",
            "name": "TCP-2",
            "network_security_group_name": "k8s-master-nfs-sec-group",
            "priority": 1004,
            "protocol": "Tcp",
            "resource_group_name": "azure-k8s",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vms.azurerm_network_security_group.k8s_sec_group",
            "module.vms.azurerm_resource_group.k8s"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "10255",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/networkSecurityGroups/k8s-master-nfs-sec-group/securityRules/TCP-3",
            "name": "TCP-3",
            "network_security_group_name": "k8s-master-nfs-sec-group",
            "priority": 1005,
            "protocol": "Tcp",
            "resource_group_name": "azure-k8s",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vms.azurerm_network_security_group.k8s_sec_group",
            "module.vms.azurerm_resource_group.k8s"
          ]
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp-workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "10250",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/networkSecurityGroups/k8s-worker01-sec-group/securityRules/TCP-0",
            "name": "TCP-0",
            "network_security_group_name": "k8s-worker01-sec-group",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "azure-k8s",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vms.azurerm_network_security_group.k8s_sec_group",
            "module.vms.azurerm_resource_group.k8s"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "30000-32767",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/networkSecurityGroups/k8s-worker01-sec-group/securityRules/TCP-1",
            "name": "TCP-1",
            "network_security_group_name": "k8s-worker01-sec-group",
            "priority": 1003,
            "protocol": "Tcp",
            "resource_group_name": "azure-k8s",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vms.azurerm_network_security_group.k8s_sec_group",
            "module.vms.azurerm_resource_group.k8s"
          ]
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "k8s_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "master-nfs",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/publicIPAddresses/k8s-master-nfs-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.46.40.228",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "k8s-master-nfs-ip",
            "resource_group_name": "azure-k8s",
            "sku": "Basic",
            "tags": {
              "environment": "k8s-prod"
            }
          },
          "dependencies": [
            "module.vms.azurerm_resource_group.k8s"
          ]
        },
        {
          "index_key": "worker01",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/publicIPAddresses/k8s-worker01-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.45.5.247",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "k8s-worker01-ip",
            "resource_group_name": "azure-k8s",
            "sku": "Basic",
            "tags": {
              "environment": "k8s-prod"
            }
          },
          "dependencies": [
            "module.vms.azurerm_resource_group.k8s"
          ]
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "k8s_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.16.1.0/24",
            "address_prefixes": [
              "172.16.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/virtualNetworks/k8s-net/subnets/k8s-subnet",
            "name": "k8s-subnet",
            "resource_group_name": "azure-k8s",
            "virtual_network_name": "k8s-net"
          },
          "dependencies": [
            "module.vms.azurerm_resource_group.k8s",
            "module.vms.azurerm_virtual_network.k8s_net"
          ]
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "k8s_net",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.0.0/16"
            ],
            "guid": "381c2e5f-8458-45f0-82cc-5d4563bd3439",
            "id": "/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/virtualNetworks/k8s-net",
            "location": "westeurope",
            "name": "k8s-net",
            "resource_group_name": "azure-k8s",
            "subnet": [
              {
                "address_prefix": "172.16.1.0/24",
                "id": "/subscriptions/3e1584ec-3cfd-4271-b796-b35a74744b77/resourceGroups/azure-k8s/providers/Microsoft.Network/virtualNetworks/k8s-net/subnets/k8s-subnet",
                "name": "k8s-subnet"
              }
            ],
            "tags": {
              "environment": "k8s-prod"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "module.vms.azurerm_resource_group.k8s"
          ]
        }
      ]
    }
  ]
}